# Logistic_Regression_Model

./: CMakeLists.txt  README.md
src/: DatabaseOperations.cpp  Logger.cpp  LogisticRegression.cpp  main.cpp
src/include/: DatabaseOperations.h  Logger.h  LogisticRegression.h
tests/: test_DatabaseOperations.cpp  test_Logger.cpp  test_LogisticRegression.cpp
tests/test_db/: empty_test.sqlite  valid_test.sqlite
